@@ -47,7 +47,7 @@ along with the GNU MP Library.  If not, see http://www.gnu.org/licenses/.  */
    The final w will retain its sign, unless an underflow occurs in a submul
    of absolute values, in which case it's flipped.
 
-   If x has more limbs than w, then mpn_submul_1 followed by mpn_com_n is
+   If x has more limbs than w, then mpn_submul_1 followed by mpn_com is
    used.  The alternative would be mpn_mul_1 into temporary space followed
    by mpn_sub_n.  Avoiding temporary space seem good, and submul+com stands
    a chance of being faster since it involves only one set of carry
@@ -144,7 +144,7 @@ mpz_aorsmul_1 (mpz_ptr w, mpz_srcptr x, mp_limb_t y, mp_size_t sub)
               /* Borrow out of w, take twos complement negative to get
                  absolute value, flip sign of w.  */
               wp[new_wsize] = ~-cy;  /* extra limb is 0-cy */
-              mpn_com_n (wp, wp, new_wsize);
+              mpn_com (wp, wp, new_wsize);
               new_wsize++;
               MPN_INCR_U (wp, new_wsize, CNST_LIMB(1));
               wsize_signed = -wsize_signed;
@@ -158,7 +158,7 @@ mpz_aorsmul_1 (mpz_ptr w, mpz_srcptr x, mp_limb_t y, mp_size_t sub)
           mp_limb_t  cy2;
 
           /* -(-cy*b^n + w-x*y) = (cy-1)*b^n + ~(w-x*y) + 1 */
-          mpn_com_n (wp, wp, wsize);
+          mpn_com (wp, wp, wsize);
           cy += mpn_add_1 (wp, wp, wsize, CNST_LIMB(1));
           cy -= 1;
 
